@@ -80,14 +80,11 @@ public abstract class GlitchtrapSuitItem extends ArmorItem {
 			consumer.accept(new IClientItemExtensions() {
 				@Override
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("head",
-							new ModelGlitchtrap_Mask(Minecraft.getInstance().getEntityModels().bakeLayer(ModelGlitchtrap_Mask.LAYER_LOCATION)).Head,
-							"hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
-							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm",
-							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm",
-							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg",
-							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
-							new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
+							Map.of("head", new ModelGlitchtrap_Mask(Minecraft.getInstance().getEntityModels().bakeLayer(ModelGlitchtrap_Mask.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
+									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm",
+									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
+									new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
 					armorModel.young = living.isBaby();
